styles.css
:root{
    --brand-color-dark-blue: "#222A35";
}
body, h1, div, h2, p {
    margin: 0;
    padding: 0;
}

.container {
    display: flex;
    min-height: 100vh; 
    max-height: 100vh;
    align-items: stretch;
    overflow: none;
}

.left-column {
    display: flex;
    overflow: none;
    flex-direction: column;
    flex: 1;
    max-height: 100vh;
    background: black;
    color: bisque; 
    padding: 15px;
    position: sticky;
}

.my-name{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: bisque;
    font-size: x-large;
}

.profile-pic{
    border-radius: 50%;
    border: 4px solid  #fff;
    max-width: 100%;
    height: auto;
    display: block;margin: auto;

}

.pp-container{
    flex:1;
    margin:20px;
    align-self: center;
}

.navigation-container{
    display: flex;
    flex-direction: column;
    flex:5;
    
}

.right-column {
    display: flex;
    flex-direction: column;
    flex: 7;
    background: black; 
    max-width: 90vw;
    max-height: 100vh;
    overflow: hidden;
    z-index: -1;

}
.sectionlist-container{
    display: flex;
    flex-direction: column;
    flex: 1;
    margin-top: auto;
    align-items: start;
    justify-content: end;
}

.site-section{
    background: black;
    color: bisque;
    text-align: start;
    border: none;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: bold;
    
    padding-left: 0;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-top: 0px;
    
}



.section-content{
    padding: 20px;
    position: relative;
    min-height: 100vh ;
    max-height: 100vh;
    width: 100vw;
}

.social-links{
    display: inline ;
}

.fa {
    color:bisque;
    font-size: 10px;
    width: 10px;
    margin-right:10px;
    text-align: center;
    text-decoration: none;
}
  
.fa:hover {
opacity: 0.7;
}


@media only screen and (max-width:640px){
    .container{display: block;}
    .left-column{width: 100%;}
    .right-column{width: 100%;}
}


.blog-background{
    background-color: black;
    height: 100vh;
}
.blog-header{
    position: sticky;
    height: 10vh;
    display: flex;
    justify-content: end;
    overflow: none;
    opacity:1 !important;
}
.blog-body{
    flex:6;
    height: 90vh;
    overflow:auto;
    opacity:1 !important;
}

.blog-block{
    height: 250px;
    margin: 30px;
    background-image: url('/img/parchment.jpg');
    background-attachment: fixed;
    opacity: 0.2;
} 

.individual-project{
    background-repeat: no-repeat;
    background-position: center center;
    width: 100%;
    height: 360px;
    min-height: 360px;
    margin: 2px;
    color:#fff
}
.individual-project:hover {
    opacity: 0.7;
    }
    

.vertical-flex{
    flex-direction: column !important;
}

.quote{
    margin-right: 20px;
    margin-bottom: 20px;
    margin-left: auto;
    margin-top: auto;
    color: bisque;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.projects-screen{
    flex:1;
    height: 100vh;
    max-height: 100vh;
    max-width: 90vw;
    overflow: auto;
}

.project-header{
    height: 50vh;
    width: 100vh;
}
.project-footer{
    height:50vh;
    width:100vh;
}

#project-autumn{
    background-image: url('/img/autumn.gif');
}
#project-quadball{
    background-image: url('/img/quadball.gif');
}#project-mednlp{
    background-image: url('/img/mednlp.gif');
}#project-motheory{
    background-image: url('/img/motheory.gif');
}
.project-title{
    position: relative;
    bottom:0px;
    left:0px;
    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
    font-size: 8em;
    letter-spacing: 20px;
}


#prj{
    display: block;
    height: 100vh;
    width: 90vw;
    max-width: 90vw;
    background-color: black;
    margin: 0rem;
}


#project-track > .project-img{
    width: 50vw;
    height: 60vh;
    object-fit: cover;
    opacity:0.2
}

#project-track > .project-img.active{
    opacity:1;
}

#project-track{
    display: flex;
    gap:4vmin;
    position:absolute;
    left:25%;
    top:25%;
    overflow: hidden !important;
    width: 75%;
    
}



 /*
    WISTERIA #c1ade0   
    CHAMPAGNE #ffe4c4 
    CELADON ADE0B8   
    VIRIDIAN 618B6A 
    VIRIDIAN x CELADON => 87BC91
    WISTERIA x CHAMPAGNE => d8c8d2  -> 
*/

button.c2a{
    flex:1;
    position: relative;

    color: #618B6A;
    bottom: 0%;
    background-color: #222d35;
    padding: 1em;
    border-radius: 7%;
    font-size: 1rem;
    height:10vh;
    width: 10vw;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: bolder;
    text-align: center;
    vertical-align: middle;
    border-style:dashed;
    border-color:#618B6A ;
    align-self: center;
}

div.c2a > div{
    text-align: center;
    vertical-align: middle;
}

button.c2b{
    background-color: #c4dfff;

}

.info{
    position: relative;
    flex:5;
    height: 10vh;
}
.info-header{
    font-weight:bold;
    font-family: 'Segoe UI';
    /* color: #ADE0B8; */
}
.info-info{
    font-family: 'Segoe UI';
    font-size: small;
    color:#d8c8d2;
    margin-top: 0.5em;
}

.contact{
    display: flex;
    flex: 1;
    opacity: 1;
}

.c2a:hover{
    opacity: 0.3;
}

#contact-container{
    display: flex;
    gap:1em;
    justify-content: space-between;
    flex-direction: column;
    
}

#contact-container > div{
    margin-left:1em;
    margin-top:1em;
    margin-right:1em;
    padding:2em;
    background-color: #080d0e;
    color:bisque;

}

.social-links{
    margin-top:1em
}

html{
    scroll-behavior: smooth;
}

